--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -5,6 +5,13 @@ $size[13]{$b{2015-09-17}}
   - Alt+P to toggle it
  - Grid overlay now saves and is settable in Options->Display Settings
  - Added the 'Free' camera type to Options->Camera Settings
+ - Added mouse follow modes
+  - Start follow
+    - ALT+F
+    - Hold LMB
+  - End follow
+    - ALT+F
+    - Release LMB
 
 $size[13]{$b{2015-09-16}}
  - Added options to display specific boulder/bush/tree on minimap $i{(romov's client)}
