--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -3,6 +3,8 @@ $size[13]{$b{2015-09-16}}
  - Added option to display simple crops $i{(apxeolog's client)}
  - Moved some options to other panels
   - Added Minimap Settings section
+ - Added option to disable weather (clouds, etc.)
+  - Options->Display Settings->Show weather
 
 $size[13]{$b{2015-09-14}}
  - Fixing issue with undocked minimap and toggling the ui
