adding free camera type

--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -4,6 +4,7 @@ $size[13]{$b{2015-09-17}}
  - Added option to show crop growth stage
   - Alt+P to toggle it
  - Grid overlay now saves and is settable in Options->Display Settings
+ - Added the 'Free' camera type to Options->Camera Settings
 
 $size[13]{$b{2015-09-16}}
  - Added options to display specific boulder/bush/tree on minimap $i{(romov's client)}
