--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,4 +1,5 @@
 $size[13]{$b{2015-09-18}}
+ - Grid overlay tweaks
  - Auto-choose options are now stored in config.json
  - Manually adding items in the config for various options automatically starts using them in-game as well
   - This can be used to add missing/unhandled items to the following
@@ -6,6 +7,7 @@ $size[13]{$b{2015-09-18}}
    - ui.minimap.bushes
    - ui.minimap.trees
    - ui.menu.flower.click.auto
+ - Various performance tweaks
 
 $size[13]{$b{2015-09-17}}
  - Added option to show object health
