--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -3,7 +3,7 @@ $size[13]{$b{2015-09-18}}
  - Auto-choose options are now stored in config.json
  - Manually adding items in the config for various options automatically starts using them in-game as well
   - This can be used to add missing/unhandled items to the following
-   - ui.minimap.boulders
+   - ui.minimap.bumlings
    - ui.minimap.bushes
    - ui.minimap.trees
    - ui.menu.flower.click.auto
@@ -29,7 +29,7 @@ $size[13]{$b{2015-09-17}}
  - Added autochoose menu options (Options->UI Settings) $i{(ender's client)}
 
 $size[13]{$b{2015-09-16}}
- - Added options to display specific boulder/bush/tree on minimap $i{(romov's client)}
+ - Added options to display specific bumling/bush/tree on minimap $i{(romov's client)}
  - Added option to display simple crops $i{(apxeolog's client)}
  - Moved some options to other panels
   - Added Minimap Settings section
