--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,3 +1,9 @@
+$size[13]{$b{2015-09-19}}
+ - New option General->Store game data which will gather data on
+individual clients in addition to what was already gathered
+  - This data
+is used by some of the options menu widgets to give them more options
+
 $size[13]{$b{2015-09-18}}
  - Grid overlay tweaks
  - Auto-choose options are now stored in config.json
