--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -18,6 +18,7 @@ $size[13]{$b{2015-09-19}}
  - Caching growth stage, growth %, and object damage for performance
  - Mass transfer only identical items (fixes meat transferring) $i{(ender's client)}
  - Option to force long tooltips
+ - Option to enable/disable mouse follow (enabled by default)
 
 $size[13]{$b{2015-09-18}}
  - Grid overlay tweaks
