--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,5 +1,7 @@
 $size[13]{$b{2015-10-04}}
  - Added option to display simple foragables $i{(romov's client)}
+ - Added option to display critter paths $i{(romov's client)}
+ - Added option to display player paths $i{(romov's client)}
 
 $size[13]{$b{2015-10-02}}
  - Added option to display the values on all horizontal sliders, which makes Land Survey much easier to sync up (Options->UI Settings)
