--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -1,3 +1,7 @@
+$size[13]{$b{2015-10-05}}
+ - Added game time display $i{(undefinedterry's client)}
+ - Added dewy mantle alert $i{(undefinedterry's client)}
+
 $size[13]{$b{2015-10-04}}
  - Added option to display simple foragables $i{(romov's client)}
  - Added option to display critter paths $i{(romov's client)}
