--- a/src/changelog.txt
+++ b/src/changelog.txt
@@ -3,6 +3,7 @@ $size[13]{$b{2015-10-05}}
  - Added dewy mantle alert $i{(undefinedterry's client)}
  - Added 8 directional camera lock option (Options->Camera Settings) $i{(bdew's client)}
  - Added option to disable dynamic lights $i{(bdew's client)}
+ - Added options for FPS limits $i{(bdew's client)}
 
 $size[13]{$b{2015-10-04}}
  - Added option to display simple foragables $i{(romov's client)}
